--- a/index.html
+++ b/index.html
@@ -2,12 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>FormBuilder</title>
+  <title>ProductSpec</title>
   <base href="/">
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="styles.c7a902f12a2d95d4fe61.css"></head>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<link rel="stylesheet" href="styles.09e2c710755c8867a460.css"></head>
 <body>
   <app-root></app-root>
-<script src="runtime-es2015.c5fa8325f89fc516600b.js" type="module"></script><script src="runtime-es5.c5fa8325f89fc516600b.js" nomodule defer></script><script src="polyfills-es5.3e8196928d184a6e5319.js" nomodule defer></script><script src="polyfills-es2015.5b10b8fd823b6392f1fd.js" type="module"></script><script src="main-es2015.c076e04d1e96c1bb36eb.js" type="module"></script><script src="main-es5.c076e04d1e96c1bb36eb.js" nomodule defer></script></body>
+<script src="runtime-es2015.c8ae078f2b239cb1d5f9.js" type="module"></script><script src="polyfills-es2015.8b6f1589299dac35a827.js" type="module"></script><script src="runtime-es5.ec96189ffb26b9164f03.js" nomodule></script><script src="polyfills-es5.6758b8e45f7c73484181.js" nomodule></script><script src="main-es2015.69df9ee647d6723addfa.js" type="module"></script><script src="main-es5.cef1d074e55944052022.js" nomodule></script></body>
 </html>
